--- a/app/src/main/res/layout/activity_regional_stats.xml
+++ b/app/src/main/res/layout/activity_regional_stats.xml
@@ -186,7 +186,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/countryRecoveredCV"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:cardBackgroundColor="@color/deaths"
+                app:cardBackgroundColor="@color/red"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
