--- a/app/src/main/res/layout/item_country_cases_summary.xml
+++ b/app/src/main/res/layout/item_country_cases_summary.xml
@@ -107,7 +107,7 @@
         <TextView
             android:id="@+id/deathsValueTV"
             style="@style/Covid19TextView.Body.Bold"
-            android:textColor="@color/deaths"
+            android:textColor="@color/red"
             tools:text="2"
             app:layout_constraintTop_toBottomOf="@id/recoveredValueTV"
             app:layout_constraintStart_toStartOf="parent"
@@ -130,7 +130,7 @@
             android:textAppearance="@style/ChipTextAppearance"
             app:chipMinHeight="15dp"
             android:textSize="12sp"
-            app:chipBackgroundColor="@color/deaths"
+            app:chipBackgroundColor="@color/red"
             android:textColor="@color/white"
             app:layout_constraintStart_toEndOf="@id/deathsTV"
             app:layout_constraintTop_toTopOf="@id/deathsValueTV"
