--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="white">#FFFFFF</color>
     <color name="grey">#818181</color>
     <color name="black">#000000</color>
-    <color name="deaths">#EB5757</color>
+    <color name="red">#EB5757</color>
     <color name="ash">#F4F4F4</color>
     <color name="colorWhiteTransparent">#33FFFFFF</color>
     <color name="colorPrimaryDarkTransparent">#4D219653</color>
