--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,30 +7,61 @@
     tools:context=".ui.splashscreen.SplashScreenActivity">
 
     <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/bg_splashscreen"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <ImageView
+        android:id="@+id/logo_IV"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:src="@drawable/ic_virus"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="100dp"/>
+
+    <ImageView
         android:id="@+id/app_logo_IV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_app_logo_full"
-        app:layout_constraintBottom_toTopOf="@id/daily_motivation_TV"
+        android:src="@drawable/ic_app_name_logo_full"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/logo_IV"
+        android:layout_marginTop="12dp"/>
+
+    <TextView
+        android:id="@+id/daily_motivation_title_TV"
+        style="@style/Covid19TextView"
+        android:text="@string/title_daily_motivation"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="@color/grey"
+        app:layout_constraintTop_toBottomOf="@id/app_logo_IV"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/daily_motivation_TV"
+        app:layout_constraintVertical_chainStyle="packed"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintVertical_bias="0.3"/>
 
     <TextView
         android:id="@+id/daily_motivation_TV"
-        style="@style/Covid19TextView.Body.Semibold"
+        style="@style/Covid19TextView"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textSize="24sp"
+        android:textSize="20sp"
         tools:text="Even a stopped clock is right twice a day.Love yourself enough to never lower your standards for anyone. Every piece of you is a burst of beautiful."
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/grey"
         android:gravity="center"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
-        app:autoSizeTextType="uniform"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/app_logo_IV" />
+        app:layout_constraintTop_toBottomOf="@+id/daily_motivation_title_TV"
+        android:layout_marginTop="16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
