--- a/app/src/main/res/layout/item_country_cases_summary.xml
+++ b/app/src/main/res/layout/item_country_cases_summary.xml
@@ -12,8 +12,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="26dp">
+        android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/flagIV"
@@ -120,7 +119,9 @@
             android:text="@string/deaths_lower_case"
             android:layout_marginStart="2dp"
             app:layout_constraintTop_toTopOf="@id/deathsValueTV"
-            app:layout_constraintStart_toEndOf="@id/deathsValueTV"/>
+            app:layout_constraintStart_toEndOf="@id/deathsValueTV"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="26dp"/>
 
         <com.google.android.material.chip.Chip
             android:id="@+id/deathsDeltaCP"
@@ -136,6 +137,18 @@
             app:layout_constraintTop_toTopOf="@id/deathsValueTV"
             app:layout_constraintBottom_toBottomOf="@id/deathsValueTV"
             android:layout_marginStart="8dp"
+            android:visibility="gone"/>
+
+        <ImageView
+            android:id="@+id/arrowRightIV"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            app:srcCompat="@drawable/ic_arrow_right"
+            android:tint="@color/grey"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
             android:visibility="gone"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
