Change survivor to shared preferences set username

--- a/app/src/main/res/layout/header_global_stats_dashboard.xml
+++ b/app/src/main/res/layout/header_global_stats_dashboard.xml
@@ -8,7 +8,7 @@
     <TextView
         android:id="@+id/welcomeTextTV"
         style="@style/Covid19TextView"
-        android:text="Hello Survivor"
+        tools:text="Hello Survivor"
         android:textColor="#000000"
         android:textSize="16sp"
         android:textStyle="bold"
