Added icons for prevention tips

--- a/app/src/main/res/layout/fragment_prevention_tip.xml
+++ b/app/src/main/res/layout/fragment_prevention_tip.xml
@@ -31,7 +31,7 @@
             android:layout_marginTop="14dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/preventionTipsTitleTV"
-            android:contentDescription="wash your hands" />
+            android:contentDescription="Prevention tip icon" />
 
         <TextView
             android:id="@+id/preventionTipsSummary1TV"
