--- a/app/src/main/res/drawable/flag_nz.xml
+++ b/app/src/main/res/drawable/flag_nz.xml
@@ -1,140 +1,61 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="160dp"
-    android:height="120dp"
-    android:viewportWidth="640"
-    android:viewportHeight="480">
+    android:width="300dp"
+    android:height="150dp"
+    android:viewportWidth="300"
+    android:viewportHeight="150">
   <path
-      android:pathData="M0,0h640v480H0z"
-      android:fillColor="#00247d"
-      android:fillType="evenOdd"/>
-  <path
-      android:pathData="M508.425,107.188l0,15.169L538.764,107.188z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M514.889,124.047l-8.916,-12.272L539.433,106.215z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M508.425,107.188l-0,15.169L478.086,107.188z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M501.961,124.047l8.916,-12.272L477.417,106.215z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M517.081,113.477l-14.427,4.688L526.456,142.331z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M503.045,124.834l8.916,-12.272L527.589,142.667z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M499.769,113.477l14.427,4.688L509.144,84.624z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M517.8,112.54l-14.427,4.688L508.425,83.686z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M499.769,113.477l14.427,4.688L490.394,142.331z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M513.805,124.834l-8.916,-12.272L489.261,142.667z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M508.425,110.276l0,10.024L528.473,110.276z"
-      android:fillColor="#cc142b"/>
-  <path
-      android:pathData="M512.696,121.416l-5.892,-8.109L528.915,109.632z"
-      android:fillColor="#cc142b"/>
-  <path
-      android:pathData="M502.705,114.431l9.533,3.098L508.9,95.365z"
-      android:fillColor="#cc142b"/>
-  <path
-      android:pathData="M514.62,113.812l-9.533,3.098L508.425,94.746z"
-      android:fillColor="#cc142b"/>
-  <path
-      android:pathData="M502.705,114.431l9.533,3.098L496.51,133.498z"
-      android:fillColor="#cc142b"/>
-  <path
-      android:pathData="M511.98,121.936l-5.892,-8.109L495.762,133.72z"
-      android:fillColor="#cc142b"/>
-  <path
-      android:pathData="M587.965,177.24l0,13.499L614.963,177.24z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M593.717,192.243l-7.934,-10.921L615.558,176.374z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M580.262,182.837l12.838,4.171L571.92,208.513z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M592.753,192.943l-7.934,-10.921L570.912,208.812z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M587.965,180.328l0,8.353L604.671,180.328z"
-      android:fillColor="#cc142b"/>
-  <path
-      android:pathData="M591.524,189.611l-4.91,-6.758L605.04,179.792z"
-      android:fillColor="#cc142b"/>
-  <path
-      android:pathData="M415.881,200.453l0,15.169L446.22,200.453z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M422.345,217.312l-8.916,-12.272L446.889,199.479z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M407.225,206.742l14.427,4.688L416.6,177.888z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M425.256,205.805l-14.427,4.688L415.881,176.951z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M407.225,206.742l14.427,4.688L397.85,235.596z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M421.262,218.099l-8.916,-12.272L396.717,235.932z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M415.881,203.54l0,10.024L435.929,203.54z"
-      android:fillColor="#cc142b"/>
-  <path
-      android:pathData="M420.152,214.681l-5.892,-8.109L436.371,202.897z"
-      android:fillColor="#cc142b"/>
-  <path
-      android:pathData="M508.425,346.756l0,16.84L542.105,346.756z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M515.6,365.472l-9.898,-13.624L542.848,345.675z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M508.425,349.843l0,11.694L531.814,349.843z"
-      android:fillColor="#cc142b"/>
-  <path
-      android:pathData="M513.408,362.84l-6.874,-9.461L532.33,349.093z"
-      android:fillColor="#cc142b"/>
+      android:pathData="M0,0h300v150h-300z"
+      android:fillColor="#00247D"/>
   <group>
     <clip-path
-        android:pathData="M0,0l364.086,0l0,219.417L0,219.417z"/>
+        android:pathData="M0,0h150v75h-150z"/>
     <path
         android:fillColor="#FF000000"
-        android:pathData="M0,0l364.086,219.417M0,219.417L364.086,0"
-        android:strokeWidth="60"
-        android:strokeColor="#fff"/>
+        android:pathData="M0,0l150,75M0,75l150,-75"
+        android:strokeWidth="15"
+        android:strokeColor="#FFFFFF"/>
   </group>
   <group>
     <clip-path
-        android:pathData="M0,0l182.043,109.708L0,109.708zM182.043,0l182.043,0L182.043,109.708zM182.043,109.708l182.043,0l0,109.708zM182.043,109.708l0,109.708L0,219.417z"/>
+        android:pathData="M0,0l75,37.5h-75L0,0zM75,0h75l-75,37.5L75,0zM75,37.5h75v37.5L75,37.5zM75,37.5v37.5h-75L75,37.5z"/>
     <path
         android:fillColor="#FF000000"
-        android:pathData="M0,0l364.086,219.417M0,219.417L364.086,0"
-        android:strokeWidth="40"
-        android:strokeColor="#cc142b"/>
-  </group>
-  <group>
-    <clip-path
-        android:pathData="M0,0h600v300H0z"/>
-    <path
-        android:pathData="M151.7,0v79.4H0V140h151.7v79.4h60.7v-79.3H364V79.4H212.4V0z"
-        android:fillColor="#fff"/>
+        android:pathData="M0,0l150,75M0,75l150,-75"
+        android:strokeWidth="10"
+        android:strokeColor="#CC142B"/>
   </group>
   <path
-      android:pathData="M163.8,0v91.5H0v36.4h163.8v91.5h36.4V128h163.9V91.5H200.2V0z"
-      android:fillColor="#cc142b"/>
+      android:fillColor="#FF000000"
+      android:pathData="M75,0v75M0,37.5h150"
+      android:strokeWidth="25"
+      android:strokeColor="#FFFFFF"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M75,0v75M0,37.5h150"
+      android:strokeWidth="15"
+      android:strokeColor="#CC142B"/>
+  <path
+      android:pathData="M244.608,52.543l6.242,4.535l-2.384,7.338l6.242,-4.535l6.242,4.535l-2.384,-7.338l6.242,-4.535l-7.716,0l-2.384,-7.338l-2.384,7.338z"
+      android:fillColor="#FFFFFF"/>
+  <path
+      android:pathData="M248.458,53.794l3.863,2.806l-1.476,4.541l3.863,-2.806l3.863,2.806l-1.475,-4.541l3.862,-2.806l-4.774,0l-1.476,-4.541l-1.475,4.541z"
+      android:fillColor="#CC142B"/>
+  <path
+      android:pathData="M213.65,26.312l7.015,5.096l-2.68,8.247l7.015,-5.097l7.015,5.097l-2.679,-8.247l7.014,-5.096l-8.671,0l-2.679,-8.246l-2.679,8.246z"
+      android:fillColor="#FFFFFF"/>
+  <path
+      android:pathData="M217.5,27.563l4.635,3.367l-1.77,5.45l4.635,-3.368l4.635,3.368l-1.77,-5.45l4.635,-3.367l-5.729,0l-1.771,-5.449l-1.771,5.449z"
+      android:fillColor="#CC142B"/>
+  <path
+      android:pathData="M178.991,61.183l7.014,5.096l-2.679,8.247l7.015,-5.097l7.015,5.097l-2.68,-8.247l7.015,-5.096l-8.671,0l-2.679,-8.246l-2.68,8.246z"
+      android:fillColor="#FFFFFF"/>
+  <path
+      android:pathData="M182.841,62.434l4.635,3.367l-1.771,5.45l4.636,-3.368l4.635,3.368l-1.77,-5.45l4.635,-3.367l-5.73,0l-1.77,-5.449l-1.771,5.449z"
+      android:fillColor="#CC142B"/>
+  <path
+      android:pathData="M212.4,115.906l7.787,5.658l-2.974,9.154l7.787,-5.658l7.787,5.658l-2.974,-9.154l7.787,-5.658l-9.625,0l-2.975,-9.155l-2.974,9.155z"
+      android:fillColor="#FFFFFF"/>
+  <path
+      android:pathData="M216.25,117.157l5.408,3.929l-2.066,6.357l5.408,-3.929l5.408,3.929l-2.066,-6.357l5.408,-3.929l-6.684,0l-2.066,-6.357l-2.066,6.357z"
+      android:fillColor="#CC142B"/>
 </vector>
