--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -52,12 +52,6 @@
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"/>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -130,6 +124,7 @@
                     android:visibility="gone"/>
 
                 <ImageView
+                    android:id="@+id/releasesIV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
