--- a/app/src/main/res/layout/fragment_screening_tool_intro.xml
+++ b/app/src/main/res/layout/fragment_screening_tool_intro.xml
@@ -28,10 +28,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/screeningToolIV"
-        app:layout_constraintBottom_toTopOf="@id/startScreeningMB"
+        app:layout_constraintBottom_toTopOf="@id/descriptionTV"
         android:layout_marginStart="80dp"
         android:layout_marginEnd="80dp"
         android:layout_marginTop="20dp"/>
+
+    <TextView
+        android:id="@+id/descriptionTV"
+        style="@style/Covid19TextView.Body"
+        android:layout_width="0dp"
+        android:text="Answer the questions that follow anonymously to check if you have been exhibiting symptoms relating to Covid-19 and get advice on the next step you should take."
+        android:textColor="@color/black"
+        android:gravity="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/titleTV"
+        app:layout_constraintBottom_toTopOf="@id/startScreeningMB"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginTop="10dp"/>
     
     <com.google.android.material.button.MaterialButton
         android:id="@+id/startScreeningMB"
@@ -39,7 +54,7 @@
         android:layout_height="wrap_content"
         android:text="@string/start_screening"
         android:backgroundTint="@color/colorPrimaryDark"
-        app:layout_constraintTop_toBottomOf="@id/titleTV"
+        app:layout_constraintTop_toBottomOf="@id/descriptionTV"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
