--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,7 @@
     <style name="Covid19TextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="font">@font/proxima_nova_regular</item>
     </style>
 
     <style name="Covid19TextView.Body" parent="Covid19TextView">
@@ -32,16 +33,19 @@
     <style name="Covid19TextView.Body.Bold" parent="Covid19TextView.Body">
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">16sp</item>
+        <item name="font">@font/proxima_nova_bold</item>
     </style>
 
     <style name="Covid19TextView.Head.Title" parent="Covid19TextView">
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">32sp</item>
+        <item name="font">@font/proxima_nova_bold</item>
     </style>
 
     <style name="Covid19TextView.Body.Title" parent="Covid19TextView">
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">18sp</item>
+        <item name="font">@font/proxima_nova_bold</item>
     </style>
 
     <style name="Covid19TextView.Body.Paragraph" parent="Covid19TextView">
