--- a/app/src/main/res/layout/reminder_dialog.xml
+++ b/app/src/main/res/layout/reminder_dialog.xml
@@ -5,6 +5,34 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <TextView
+        android:id="@+id/hour_TV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:text="@string/hours"
+        app:layout_constraintStart_toStartOf="@+id/hour_NP"
+        app:layout_constraintEnd_toEndOf="@+id/hour_NP"
+        app:layout_constraintBottom_toTopOf="@+id/hour_NP"
+        />
+
+    <TextView
+        android:id="@+id/minute_TV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:text="@string/minutes"
+        app:layout_constraintStart_toStartOf="@+id/minute_NP"
+        app:layout_constraintEnd_toEndOf="@+id/minute_NP"
+        app:layout_constraintBottom_toTopOf="@+id/minute_NP"
+        />
+
     <NumberPicker
         android:id="@+id/hour_NP"
         android:layout_width="wrap_content"
