--- a/app/src/main/res/layout/fragment_screening_tool_intro.xml
+++ b/app/src/main/res/layout/fragment_screening_tool_intro.xml
@@ -7,59 +7,79 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.screeningTool.fragments.ScreeningToolIntroFragment">
 
-    <ImageView
-        android:id="@+id/screeningToolIV"
-        android:layout_width="wrap_content"
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/screeningToolNSV"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_screening_tool_full"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/titleTV"
-        app:layout_constraintVertical_chainStyle="packed"/>
-
-    <TextView
-        android:id="@+id/titleTV"
-        style="@style/Covid19TextView.Head.Title"
-        android:layout_width="0dp"
-        android:text="@string/title_screening_tool"
-        android:gravity="center"
-        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/screeningToolIV"
-        app:layout_constraintBottom_toTopOf="@id/descriptionTV"
-        android:layout_marginStart="80dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginTop="20dp"/>
-
-    <TextView
-        android:id="@+id/descriptionTV"
-        style="@style/Covid19TextView.Body"
-        android:layout_width="0dp"
-        android:text="Answer the questions that follow anonymously to check if you have been exhibiting symptoms relating to Covid-19 and get advice on the next step you should take."
-        android:textColor="@color/black"
-        android:gravity="center"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/titleTV"
         app:layout_constraintBottom_toTopOf="@id/startScreeningMB"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginTop="10dp"/>
-    
+        android:layout_marginTop="10dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/screeningToolIV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_screening_tool_full"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/titleTV"
+                app:layout_constraintVertical_chainStyle="packed"/>
+
+            <TextView
+                android:id="@+id/titleTV"
+                style="@style/Covid19TextView.Head.Title"
+                android:layout_width="0dp"
+                android:text="@string/title_screening_tool"
+                android:gravity="center"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/screeningToolIV"
+                app:layout_constraintBottom_toTopOf="@id/descriptionTV"
+                android:layout_marginStart="80dp"
+                android:layout_marginEnd="80dp"
+                android:layout_marginTop="20dp"/>
+
+            <TextView
+                android:id="@+id/descriptionTV"
+                style="@style/Covid19TextView.Body"
+                android:layout_width="0dp"
+                android:text="@string/screening_tool_description"
+                android:textColor="@color/black"
+                android:gravity="center"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/titleTV"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginStart="50dp"
+                android:layout_marginEnd="50dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/startScreeningMB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/start_screening"
         android:backgroundTint="@color/colorPrimaryDark"
-        app:layout_constraintTop_toBottomOf="@id/descriptionTV"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/screeningToolNSV"
         android:paddingStart="34dp"
         android:paddingEnd="34dp"
-        android:layout_marginTop="45dp"/>
+        android:layout_marginTop="45dp"
+        android:layout_marginBottom="20dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
