--- a/app/src/main/res/layout/fragment_screening_tool_intro.xml
+++ b/app/src/main/res/layout/fragment_screening_tool_intro.xml
@@ -10,12 +10,12 @@
     <androidx.core.widget.NestedScrollView
         android:id="@+id/screeningToolNSV"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/startScreeningMB"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/startScreeningMB"
-        android:layout_marginTop="10dp">
+        app:layout_constraintTop_toTopOf="parent"
+        android:fillViewport="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -26,42 +26,43 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_screening_tool_full"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/titleTV"
-                app:layout_constraintVertical_chainStyle="packed"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed"
+                android:layout_marginTop="10dp" />
 
             <TextView
                 android:id="@+id/titleTV"
                 style="@style/Covid19TextView.Head.Title"
                 android:layout_width="0dp"
-                android:text="@string/title_screening_tool"
-                android:gravity="center"
-                android:textColor="@color/black"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/screeningToolIV"
-                app:layout_constraintBottom_toTopOf="@id/descriptionTV"
                 android:layout_marginStart="80dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="80dp"
-                android:layout_marginTop="20dp"/>
+                android:gravity="center"
+                android:text="@string/title_screening_tool"
+                android:textColor="@color/black"
+                app:layout_constraintBottom_toTopOf="@id/descriptionTV"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/screeningToolIV" />
 
             <TextView
                 android:id="@+id/descriptionTV"
                 style="@style/Covid19TextView.Body"
                 android:layout_width="0dp"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="50dp"
+                android:layout_marginBottom="20dp"
+                android:gravity="center"
                 android:text="@string/screening_tool_description"
                 android:textColor="@color/black"
-                android:gravity="center"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/titleTV"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginStart="50dp"
-                android:layout_marginEnd="50dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="20dp"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/titleTV" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -79,7 +80,6 @@
         app:layout_constraintTop_toBottomOf="@id/screeningToolNSV"
         android:paddingStart="34dp"
         android:paddingEnd="34dp"
-        android:layout_marginTop="45dp"
         android:layout_marginBottom="20dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
