--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -30,7 +30,7 @@
             <TextView
                 android:id="@+id/descriptionTV"
                 style="@style/Covid19TextView.Body.Paragraph"
-                android:text="@string/lorem_ipsum_paragraph"
+                android:text="@string/about_app"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:gravity="center"
