--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -20,11 +20,18 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/logoIV"
                 android:layout_width="wrap_content"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_app_logo_green_background"
+                android:layout_gravity="center"
+                android:layout_marginTop="80dp"/>
+
+            <ImageView
+                android:id="@+id/logoIV"
+                android:layout_width="95dp"
+                android:layout_height="36dp"
                 android:src="@drawable/ic_app_name_logo_full"
-                android:layout_marginTop="45dp"
+                android:layout_marginTop="14dp"
                 android:layout_gravity="center"/>
 
             <TextView
