--- a/app/src/main/res/layout/item_country_cases_summary.xml
+++ b/app/src/main/res/layout/item_country_cases_summary.xml
@@ -140,7 +140,7 @@
             android:visibility="gone"/>
 
         <ImageView
-            android:id="@+id/arrowRightIV"
+            android:id="@+id/regionalDataAvailabilityIV"
             android:layout_width="24dp"
             android:layout_height="24dp"
             app:srcCompat="@drawable/ic_arrow_right"
@@ -148,8 +148,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
-            android:visibility="gone"/>
+            android:layout_marginBottom="10dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
